Bug 241730 - IntersectionObserver stops tracking when cmd+ is used to zoom in
Summary: IntersectionObserver stops tracking when cmd+ is used to zoom in
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-17 16:05 PDT by Simon Fraser (smfr)
Modified: 2022-06-24 10:16 PDT (History)
1 user (show)

See Also:


Attachments
Test (1.65 KB, text/html)
2022-06-17 16:05 PDT, Simon Fraser (smfr)
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2022-06-17 16:05:19 PDT
When Zooming IN using cmd +, IntersectionObserver stops observing. 

Steps To Reproduce:
1. Open the attached example
2. Scroll Down
3. Assert it works fine and highlights the items at around 35% from top.
4. Now zoom in.
5. Assert it no longer highlights
Comment 1 Simon Fraser (smfr) 2022-06-17 16:05:48 PDT
Created attachment 460317 [details]
Test
Comment 2 Simon Fraser (smfr) 2022-06-17 16:17:55 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1604
Comment 3 Simon Fraser (smfr) 2022-06-23 18:43:12 PDT
<rdar://92272892>
Comment 4 EWS 2022-06-24 10:15:56 PDT
Committed 251829@main (ee62d87260e8): <https://commits.webkit.org/251829@main>

Reviewed commits have been landed. Closing PR #1604 and removing active labels.